--- a/features-consumer/pom.xml
+++ b/features-consumer/pom.xml
@@ -54,6 +54,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.52</version>
+        </dependency>
+
     </dependencies>
 
     <build>
