--- a/features-common/pom.xml
+++ b/features-common/pom.xml
@@ -8,10 +8,10 @@
         <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.shirc.middleware</groupId>
-    <artifactId>features-consumer</artifactId>
+    <groupId>com.shirc.middleware.features</groupId>
+    <artifactId>features-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>features-consumer</name>
+    <name>features-common</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -36,13 +36,11 @@
             </exclusions>
         </dependency>
 
-
-        <!--
-                <dependency>
-                    <groupId>com.alibaba.boot</groupId>
-                    <artifactId>dubbo-spring-boot-starter</artifactId>
-                    <version>0.2.0</version>
-                </dependency>-->
+        <dependency>
+            <groupId>com.shirc.middleware.features</groupId>
+            <artifactId>features-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <!--整合dubbo-->
         <dependency>
@@ -67,36 +65,6 @@
             <artifactId>curator-recipes</artifactId>
             <version>2.8.0</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.shirc.middleware.features</groupId>
-            <artifactId>features-facade</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.52</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.shirc.middleware.features</groupId>
-            <artifactId>features-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
 
 
     </dependencies>
