--- a/features-service/pom.xml
+++ b/features-service/pom.xml
@@ -40,6 +40,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>com.shirc.middleware.features</groupId>
+            <artifactId>features-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
+
+
 <!--
         <dependency>
             <groupId>com.alibaba.boot</groupId>
