--- a/features-services2/pom.xml
+++ b/features-services2/pom.xml
@@ -8,10 +8,10 @@
         <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.shirc.middleware</groupId>
-    <artifactId>features-consumer</artifactId>
+    <groupId>com.shirc.middleware.features</groupId>
+    <artifactId>features-services2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>features-consumer</name>
+    <name>features-services2</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -36,13 +36,13 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>com.shirc.middleware.features</groupId>
+            <artifactId>features-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
-        <!--
-                <dependency>
-                    <groupId>com.alibaba.boot</groupId>
-                    <artifactId>dubbo-spring-boot-starter</artifactId>
-                    <version>0.2.0</version>
-                </dependency>-->
+
 
         <!--整合dubbo-->
         <dependency>
@@ -68,16 +68,12 @@
             <version>2.8.0</version>
         </dependency>
 
+
+
         <dependency>
             <groupId>com.shirc.middleware.features</groupId>
             <artifactId>features-facade</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -85,18 +81,6 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.52</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.shirc.middleware.features</groupId>
-            <artifactId>features-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
 
 
     </dependencies>
