--- a/features-common/pom.xml
+++ b/features-common/pom.xml
@@ -36,11 +36,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>com.shirc.middleware.features</groupId>
-            <artifactId>features-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
 
         <!--整合dubbo-->
         <dependency>
@@ -71,10 +66,11 @@
 
     <build>
         <plugins>
-            <plugin>
+            <!-- 不可以执行jar  记得去掉这个打包插件 -->
+            <!--<plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
