--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,15 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>features</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>pom</packaging>
+
+
+    <modules>
+        <module>features-facade</module>
+        <module>features-service</module>
+        <module>features-services2</module>
+        <module>features-consumer</module>
+    </modules>
 
     <properties>
         <java.version>1.8</java.version>
