--- a/features-services2/src/main/resources/application.yml
+++ b/features-services2/src/main/resources/application.yml
@@ -3,6 +3,7 @@ dubbo:
     name: features-provider # 服务名
   registry:
     address: zookeeper://127.0.0.1:2181 # 注册中心地址
+    dynamic: true
   protocol:
     name: dubbo # 指定通信协议
     port: 20882 # 通信端口  这里指的是与消费者间的通信协议与端口
