--- a/features-service/pom.xml
+++ b/features-service/pom.xml
@@ -96,6 +96,12 @@
             <version>1.2.52</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.daimler.cap</groupId>
+            <artifactId>cap-discovery</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
 
     </dependencies>
 
