--- a/features-common/pom.xml
+++ b/features-common/pom.xml
@@ -62,6 +62,13 @@
         </dependency>
 
 
+        <!-- 解决线程池 thread-local使用 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
