--- a/features-common/pom.xml
+++ b/features-common/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.shirc.middleware.features</groupId>
     <artifactId>features-common</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>features-common</name>
     <description>Demo project for Spring Boot</description>
 
