--- a/java-agent/pom.xml
+++ b/java-agent/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>asm-all</artifactId>
             <version>5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 
 
