--- a/features-service/pom.xml
+++ b/features-service/pom.xml
@@ -19,6 +19,16 @@
     </properties>
 
     <dependencies>
+
+        <!-- 外部加载jar启动, 无侵入-->
+
+        <dependency>
+            <groupId>com.shirc.middleware.features</groupId>
+            <artifactId>features-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -41,14 +51,8 @@
             </exclusions>
         </dependency>
 
-        <!-- 外部加载jar启动, 无侵入-->
-<!--
-        <dependency>
-            <groupId>com.shirc.middleware.features</groupId>
-            <artifactId>features-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
--->
+
+
 
 
 
